# genat4_simple_app

./: CMakeLists.txt
src/: main.cpp
